# valami

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  docker-compose.keycloak.yaml  docker-compose.local.yaml  docker-compose.production.yaml  pyproject.toml
.envs/.local/: .django  .keycloak  .postgres
.envs/.production/: .django
.github/: .commit_template
.github/workflows/: bump_version.yaml  ci.yaml
compose/local/django/: Dockerfile  start
compose/production/django/: Dockerfile  entrypoint  start
config/: celery_app.py  settings.py  urls.py  urls_public.py
config/middlewares/: __init__.py  tenant_jwt_auth_middleware.py
config/settings/: base.py  local.py  production.py  test.py
valami/saml/: admin.py  apps.py  default_settings.py  helpers.py  models.py  urls.py  views.py
valami/saml/management/commands/: load_saml_settings.py
valami/saml/migrations/: 0001_initial.py
valami/tenants/: admin.py  apps.py  models.py
valami/tenants/migrations/: 0001_initial.py  0002_tenant_jwt_signing_key.py
valami/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
valami/users/migrations/: 0001_initial.py
valami/users/tests/: test_models.py
