[tool.poetry]
name = "valami"
version = "0.1.0"
description = ""
authors = ["Lajos Seyler <lajos.seyler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
