[tool.poetry]
name = "valami"
version = "0.1.0"
description = ""
authors = ["Lajos Seyler <lajos.seyler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
psycopg = {extras = ["binary"], version = "^3.2.2"}
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.0"
pre-commit = "^3.8.0"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
